fixed BUG - rows in contact suggestion list are truncated incorrectly

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -75,7 +75,7 @@
 	
 	input.input {
 		padding: 8px;
-		width: 200px;
+		width: 407px;
 
 		&::placeholder {
 			color: #b8b8b8;
